--- a/appFotos/client/package.json
+++ b/appFotos/client/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server",
     "tsc:w": "tsc -w",
     "start": "npm run tsc:w",
     "typings": "typings"
@@ -31,6 +32,6 @@
   },
   "devDependencies": {
     "typescript": "2.0.2",
-    "typings": "1.3.2"
+    "typings":"1.3.2"
   }
 }
